--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "ejs": "~1.0.0",
+    "express": "~4.9.8"
+  },
   "author": "",
   "license": "ISC"
 }
